--- a/app/src/main/res/layout/activity_masuk.xml
+++ b/app/src/main/res/layout/activity_masuk.xml
@@ -206,8 +206,8 @@
             android:text="@string/lewati"
             android:textColor="@color/gray_mid"
             android:textSize="16sp"
-            android:layout_marginTop="100dp"
-            app:layout_constraintVertical_bias="0"
+            android:layout_marginBottom="25dp"
+            app:layout_constraintVertical_bias="1"
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintTop_toBottomOf="@id/BtnDaftar"
             app:layout_constraintBottom_toBottomOf="parent"
