--- a/app/src/main/res/layout/activity_beranda.xml
+++ b/app/src/main/res/layout/activity_beranda.xml
@@ -170,6 +170,7 @@
                     tools:ignore="ContentDescription,ImageContrastCheck" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/Promo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
