--- a/app/src/main/res/layout/activity_notifikasi_detail.xml
+++ b/app/src/main/res/layout/activity_notifikasi_detail.xml
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
-            android:id="@+id/btnBack"
+            android:id="@+id/BtnBack"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
@@ -45,8 +45,8 @@
             android:textStyle="bold"
             app:layout_constraintVertical_bias=".5"
             app:layout_constraintHorizontal_bias=".5"
-            app:layout_constraintTop_toTopOf="@+id/btnBack"
-            app:layout_constraintBottom_toBottomOf="@+id/btnBack"
+            app:layout_constraintTop_toTopOf="@+id/BtnBack"
+            app:layout_constraintBottom_toBottomOf="@+id/BtnBack"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -122,6 +122,7 @@
                 tools:ignore="ContentDescription"/>
 
             <TextView
+                android:id="@+id/TeksCek"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cek_sekarang"
