--- a/app/src/main/res/layout/activity_profil_alamat.xml
+++ b/app/src/main/res/layout/activity_profil_alamat.xml
@@ -20,7 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
-            android:id="@+id/btnBack"
+            android:id="@+id/BtnBack"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="24dp"
@@ -45,8 +45,8 @@
             android:textStyle="bold"
             app:layout_constraintVertical_bias=".5"
             app:layout_constraintHorizontal_bias=".5"
-            app:layout_constraintTop_toTopOf="@+id/btnBack"
-            app:layout_constraintBottom_toBottomOf="@+id/btnBack"
+            app:layout_constraintTop_toTopOf="@+id/BtnBack"
+            app:layout_constraintBottom_toBottomOf="@+id/BtnBack"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
         
@@ -57,7 +57,7 @@
             android:src="@drawable/ic_border_rounded"
             android:layout_marginTop="35dp"
             app:layout_constraintVertical_bias="0"
-            app:layout_constraintTop_toBottomOf="@id/btnBack"
+            app:layout_constraintTop_toBottomOf="@id/BtnBack"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
